--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-navigation></app-navigation>
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<div class="container-fluid m-0 p-0">
+  <router-outlet></router-outlet>
 </div>
