--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,10 +1,14 @@
-<div class="jumbotron">
-  <h1 class="display-4 text-center">Heroes</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-    content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <button class="btn btn-primary btn-lg" routerLink="/heroes">Learn more</button>
-  </p>
+<div class="jumbotron-holder p-5">
+  <div class="jumbotron text-center">
+    <h1 class="display-4">Heroes</h1>
+    <p class="lead"><span class="font-italic">superhero (noun):</span> a character in a story, movie, etc. who has
+      unusual strength or power
+      and uses it to
+      help people; a
+      real person who has done something unusually brave to help someone</p>
+    <hr class="my-4">
+    <p class="lead">
+      <button class="btn btn-primary btn-lg" routerLink="/heroes">Learn more</button>
+    </p>
+  </div>
 </div>
