--- a/src/app/page/heroes/heroes.component.html
+++ b/src/app/page/heroes/heroes.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-4">
   <h1 class="text-center h2 mt-4">List of Heroes</h1>
-  <table class="table table-striped table-dark table-responsive mt-4">
+  <table class="table table-striped table-dark table-responsive-sm mt-4">
     <thead>
       <tr>
         <th>Id</th>
