--- a/src/app/page/heroes/heroes.component.html
+++ b/src/app/page/heroes/heroes.component.html
@@ -1,4 +1,10 @@
 <div class="container-fluid p-4">
+
+  <form class="form-inline my-2 my-lg-0">
+    <input (keyup)="searchEvent($event)" class="form-control mr-sm-2" type="text" placeholder="Search">
+    <button class="btn btn-search btn-secondary my-2 my-sm-0" type="submit">Search</button>
+  </form>
+
   <h1 class="text-center h2 mt-4">List of Heroes</h1>
   <table class="table table-striped table-dark table-responsive-sm mt-4">
     <thead>
@@ -10,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let hero of heroList$ | async ">
+      <tr *ngFor="let hero of heroList$ | async | filterByName: phrase">
         <td>{{hero.id}}</td>
         <td>{{hero.name}}</td>
         <td>{{hero.superPower}}</td>
