--- a/src/app/page/heroes/heroes.component.html
+++ b/src/app/page/heroes/heroes.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-4">
 
   <form class="form-inline my-2 my-lg-0">
-    <input (keyup)="searchEvent($event)" class="form-control mr-sm-2" type="text" placeholder="Search">
+    <input (keyup)="searchEvent($event)" class="form-control mr-sm-2" type="text" placeholder="Search by name">
     <button class="btn btn-search btn-secondary my-2 my-sm-0" type="submit">Search</button>
   </form>
 
@@ -9,14 +9,14 @@
   <table class="table table-striped table-dark table-responsive-sm mt-4">
     <thead>
       <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Superpower</th>
-        <th>Address</th>
+        <th (click)="onColumnSelect('id')">Id</th>
+        <th (click)="onColumnSelect('name')">Name</th>
+        <th (click)="onColumnSelect('superPower')">Superpower</th>
+        <th (click)="onColumnSelect('address')">Address</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let hero of heroList$ | async | filterByName: phrase">
+      <tr *ngFor="let hero of heroList$ | async | filterByName: phrase | sorter:columnKey">
         <td>{{hero.id}}</td>
         <td>{{hero.name}}</td>
         <td>{{hero.superPower}}</td>
