--- a/src/app/page/heroes/heroes.component.scss
+++ b/src/app/page/heroes/heroes.component.scss
@@ -7,8 +7,18 @@
 
 th {
   color: $secondary-color;
+  user-select: none;
+
+  &:hover {
+    color: $clickme;
+  }
 }
 
-.btn-search:hover {
-  color: $primary-color;
+.btn-search {
+  user-select: none;
+
+  &:hover {
+    color: $clickme;
+  }
 }
+
